Forgot to save before committing r1709718: "Since we now use Java 8, we no longer need to use MaxPermSize"
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@1709726 13f79535-47bb-0310-9956-ffa450edef68